Apply linter cleanup to MetarService
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>